--- a/docs/node/pages/getting-started/testimonials.mdx
+++ b/docs/node/pages/getting-started/testimonials.mdx
@@ -13,10 +13,10 @@ Here's what developers and industry leaders are saying about Tevm
 
 ## Community Highlights
 
-:::tip[Developer Feedback]
+<Callout type="info" title="Developer Feedback">
 Tevm's unique approach of bringing Ethereum execution directly to JavaScript environments has resonated with most developers who have given Tevm a try.
 Developers report problems previously difficult being simple to solve with Tevm
-:::
+</Callout>
 
 <div style={{ 
   display: 'grid', 
@@ -53,7 +53,6 @@ Developers report problems previously difficult being simple to solve with Tevm
     </div>
   </div>
 
-{" "}
 <div
   style={{
     border: "1px solid var(--vocs-color_border)",
@@ -95,7 +94,6 @@ Developers report problems previously difficult being simple to solve with Tevm
   </div>
 </div>
 
-{" "}
 <div
   style={{
     border: "1px solid var(--vocs-color_border)",
@@ -176,7 +174,6 @@ Developers report problems previously difficult being simple to solve with Tevm
   </div>
 </div>
 
-{" "}
 <div
   style={{
     border: "1px solid var(--vocs-color_border)",
@@ -216,7 +213,6 @@ Developers report problems previously difficult being simple to solve with Tevm
   </div>
 </div>
 
-{" "}
 <div
   style={{
     border: "1px solid var(--vocs-color_border)",
@@ -258,7 +254,6 @@ Developers report problems previously difficult being simple to solve with Tevm
   </div>
 </div>
 
-{" "}
 <div
   style={{
     border: "1px solid var(--vocs-color_border)",
@@ -332,22 +327,25 @@ Developers report problems previously difficult being simple to solve with Tevm
 
 ## Share Your Experience
 
-::::steps
-
-### Join the Community
-
-We'd love to hear how Tevm has improved your development workflow:
-
-- [Telegram Group](https://t.me/+ANThR9bHDLAwMjUx)
-- [Twitter/X](https://twitter.com/tevmtools)
-
-### Report Success Stories
-
-Have a compelling use case or success story?
-
-- [Create an issue](https://github.com/evmts/tevm-monorepo/issues/new?labels=testimonial&template=testimonial.md) with the label "testimonial"
-- Email the team at support@tevm.sh
-  ::::
+<div className="steps">
+  <div className="step">
+    <h3>Join the Community</h3>
+    <p>We'd love to hear how Tevm has improved your development workflow:</p>
+    <ul>
+      <li><a href="https://t.me/+ANThR9bHDLAwMjUx">Telegram Group</a></li>
+      <li><a href="https://twitter.com/tevmtools">Twitter/X</a></li>
+    </ul>
+  </div>
+  
+  <div className="step">
+    <h3>Report Success Stories</h3>
+    <p>Have a compelling use case or success story?</p>
+    <ul>
+      <li><a href="https://github.com/evmts/tevm-monorepo/issues/new?labels=testimonial&template=testimonial.md">Create an issue</a> with the label "testimonial"</li>
+      <li>Email the team at support@tevm.sh</li>
+    </ul>
+  </div>
+</div>
 
 Your feedback helps us improve Tevm and guides our development priorities!
 
