--- a/docs/node/pages/reference/bundler/index.mdx
+++ b/docs/node/pages/reference/bundler/index.mdx
@@ -3,15 +3,13 @@ title: Bundler Reference
 description: A reference guide to Tevm's bundler functionality
 ---
 
-import { Callout } from "vocs/components";
-
 # Tevm Contract Bundler
 
 The Tevm Contract Bundler allows you to import Solidity files directly into your TypeScript code, enabling a seamless development experience with type safety and IDE integration.
 
-<Callout type="note">
+:::note
 Tevm Node is the primary product. Using the bundler is optional. You can also generate contract types with `npx tevm gen` (see [Codegen Approach](/reference/bundler/troubleshooting#codegen-approach)).
-</Callout>
+:::
 
 ## Quick Navigation
 
