--- a/docs/node/pages/core/create-tevm-node.mdx
+++ b/docs/node/pages/core/create-tevm-node.mdx
@@ -3,88 +3,55 @@ title: Creating a Tevm Node
 description: Learn how to create and configure a Tevm Node
 ---
 
-import { Steps, Step } from "vocs/components";
+import { Callout, Steps, Step } from "vocs/components";
 
-import { Callout, Steps, Step } from 'vocs/components'
-
-# Creating a Tevm Node
+# Creating a MemoryClient
 
 <Callout type="info" emoji="🚀">
-  `createTevmNode` is the foundation of Tevm - a powerful function that bootstraps a complete Ethereum execution environment in JavaScript.
+  `createMemoryClient` is the foundation of Tevm - a powerful function that
+  bootstraps a complete Ethereum execution environment in JavaScript.
 </Callout>
 
-`createTevmNode` is the main entry point for spinning up a local Tevm Node instance. With a flexible configuration API, you can customize your node's behavior to fit various development, testing, and production scenarios.
-
 <Steps>
-<Step title="Install Dependencies">
-First, install the required packages:
-
-```bash
-npm install tevm
-```
-
-<details>
-<summary>Using Yarn or pnpm?</summary>
-
-```bash
-# Yarn
-yarn add tevm
-
-# pnpm
-pnpm add tevm
-```
-</details>
-</Step>
-
 <Step title="Create a Basic Node">
-Instantiate a node with default configuration:
+Instantiate a client with default configuration:
 
 ### TypeScript
+
 ```ts
-import { createTevmNode } from 'tevm'
+import { createMemoryClient } from "tevm";
 
-// Create the node instance
-const node = createTevmNode()
+const client = createMemoryClient();
 
-// Always wait for the node to be ready before using it
-await node.ready()
+// Optionally wait for the client to be ready before using it
+// This is not required but useful if profiling performance or debugging an issue
+await client.ready();
 
-// Your node is now ready to use!
+// Your client is now ready to use!
 ```
 
-### JavaScript
-```js
-const { createTevmNode } = require('tevm')
-
-// Create the node instance
-const node = createTevmNode()
-
-// Always wait for the node to be ready before using it
-await node.ready()
-
-// Your node is now ready to use!
-```
 </Step>
 
 <Step title="Configure to Your Needs">
 Tailor the node with powerful configuration options:
 
 ```ts
-import { createTevmNode, http } from 'tevm'
+import { createMemoryClient, http } from "tevm";
 
-const node = createTevmNode({
+const client = createMemoryClient({
   // Fork from a live network
   fork: {
-    transport: http('https://mainnet.infura.io/v3/YOUR-KEY'),
+    transport: http("https://mainnet.infura.io/v3/YOUR-KEY"),
   },
   // Configure automatic mining
-  miningConfig: { type: 'auto' },
+  miningConfig: { type: "auto" },
   // Set logging verbosity
-  loggingLevel: 'debug'
-})
+  loggingLevel: "debug",
+});
 
-await node.ready()
+await client.ready();
 ```
+
 </Step>
 </Steps>
 
@@ -92,59 +59,68 @@ await node.ready()
 
 Tevm Node offers extensive configuration options to adapt to different use cases. Here's a complete breakdown:
 
+<Callout type="tip" emoji="🌍">
+  All configuration options for `createMemoryClient` apply to `createTevmNode`
+  and `createTevmTransport`
+</Callout>
+
 ### Fork Configuration
 
 <Callout type="tip" emoji="🌍">
-  Forking allows you to create a local copy of any EVM chain for testing and development.
+  Forking allows you to create a local copy of any EVM chain for testing and
+  development.
 </Callout>
 
 The `fork` option creates a node that connects to an existing network:
 
 ```ts
-import { createTevmNode, http } from 'tevm'
+import { createMemoryClient, http } from "tevm";
 
-const node = createTevmNode({
+const node = createMemoryClient({
   fork: {
     // Use any EIP-1193 compatible provider
-    transport: http('https://mainnet.infura.io/v3/YOUR-KEY'),
+    transport: http("https://mainnet.infura.io/v3/YOUR-KEY"),
     // Optional: Fork from a specific block
     blockTag: 17_000_000n,
   },
-})
+});
 
-await node.ready()
+await node.ready();
 ```
 
 <Callout type="info">
-  When forking, state is fetched lazily from the remote provider and cached locally. This means your first access to any account or storage slot will be slower, but subsequent accesses will be fast.
+  When forking, state is fetched lazily from the remote provider and cached
+  locally. This means your first access to any account or storage slot will be
+  slower, but subsequent accesses will be fast.
 </Callout>
 
 ### Mining Configuration
 
 <Callout type="tip" emoji="⛏️">
-  Mining configuration determines how transactions are processed and blocks are produced.
+  Mining configuration determines how transactions are processed and blocks are
+  produced.
 </Callout>
 
 Control how and when blocks are produced with various mining modes:
 
 ```ts
 // Auto-mining: Mine a block for every transaction
-const node = createTevmNode({
+const node = createMemoryClient({
   miningConfig: {
-    type: 'auto',
+    type: "auto",
   },
-})
+});
 
 // Interval-based mining: Mine at regular intervals
-const intervalNode = createTevmNode({
+const intervalNode = createMemoryClient({
   miningConfig: {
-    type: 'interval',
+    type: "interval",
     interval: 12_000, // Mine every 12 seconds
   },
-})
+});
 
-await node.ready()
-await intervalNode.ready()
+await node.ready();
+await intervalNode.ready();
 ```
 
 ### Chain Configuration
@@ -156,38 +132,40 @@ await intervalNode.ready()
 Customize the chain parameters or use pre-configured chains:
 
 ```ts
-import { createTevmNode } from 'tevm'
-import { Common } from 'tevm/common'
+import { createMemoryClient } from "tevm";
+import { Common } from "tevm/common";
 
 // Custom chain configuration
-const customNode = createTevmNode({
+const customNode = createMemoryClient({
   common: Common.custom({
     chainId: 1337,
     networkId: 1337,
     // Other chain parameters
   }),
-})
+});
 
-await customNode.ready()
+await customNode.ready();
 ```
 
 Or use one of the pre-configured chains:
 
 ```ts
-import { createTevmNode } from 'tevm'
-import { mainnet, optimism, arbitrum, base } from 'tevm/common'
+import { createMemoryClient } from "tevm";
+import { mainnet, optimism, arbitrum, base } from "tevm/common";
 
 // Create a node with Optimism chain configuration
-const optimismNode = createTevmNode({
+const optimismNode = createMemoryClient({
   common: optimism,
-})
+});
 
-await optimismNode.ready()
+await optimismNode.ready();
 ```
 
 <details>
-<summary>Want to add your own network?</summary>
-If you need support for a network not included in Tevm, first add it to `viem/chains` and then open an issue on the Tevm repository to request the network to be added.
+  <summary>Want to add your own network?</summary>
+  If you need support for a network not included in Tevm, first add it to
+  `viem/chains` and then open an issue on the Tevm repository to request the
+  network to be added.
 </details>
 
 ### Logging Configuration
@@ -199,17 +177,17 @@ If you need support for a network not included in Tevm, first add it to `viem/ch
 Configure the internal logger to match your needs:
 
 ```ts
-const node = createTevmNode({
-  loggingLevel: 'debug', // 'fatal' | 'error' | 'warn' | 'info' | 'debug' | 'trace'
-})
+const node = createMemoryClient({
+  loggingLevel: "debug", // 'fatal' | 'error' | 'warn' | 'info' | 'debug' | 'trace'
+});
 
 // Later use the logger directly
-node.logger.debug('Detailed debugging information')
-node.logger.info('Informational message')
-node.logger.warn('Warning!')
-node.logger.error('Error encountered', { details: 'Something went wrong' })
+node.logger.debug("Detailed debugging information");
+node.logger.info("Informational message");
+node.logger.warn("Warning!");
+node.logger.error("Error encountered", { details: "Something went wrong" });
 
-await node.ready()
+await node.ready();
 ```
 
 ### Custom Precompiles
@@ -221,35 +199,35 @@ await node.ready()
 Add your own precompiled contracts to unlock powerful capabilities:
 
 ```ts
-import { definePrecompile, createContract, parseAbi } from 'tevm'
+import { definePrecompile, createContract, parseAbi } from "tevm";
 
 const calculatorPrecompile = definePrecompile({
   // Define contract interface
   contract: createContract({
     abi: parseAbi([
-      'function add(uint256 a, uint256 b) returns (uint256)',
-      'function subtract(uint256 a, uint256 b) returns (uint256)'
+      "function add(uint256 a, uint256 b) returns (uint256)",
+      "function subtract(uint256 a, uint256 b) returns (uint256)",
     ]),
-    address: '0xf2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2'
+    address: "0xf2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2",
   }),
   // Implement the precompile logic
   call: async ({ data, gasLimit }) => {
     // Precompile implementation goes here
-    console.log('Precompile called with data:', data, 'gas limit:', gasLimit)
-    
+    console.log("Precompile called with data:", data, "gas limit:", gasLimit);
+
     return {
       returnValue: new Uint8Array([0x01]), // Example return value
       executionGasUsed: 200n,
-    }
+    };
   },
-})
+});
 
 // Register the precompile with the node
-const node = createTevmNode({
+const node = createMemoryClient({
   customPrecompiles: [calculatorPrecompile.precompile()],
-})
+});
 
-await node.ready()
+await node.ready();
 ```
 
 ### Performance Profiling
@@ -261,137 +239,91 @@ await node.ready()
 Enable the built-in profiler for detailed execution metrics:
 
 ```ts
-const node = createTevmNode({
+const node = createMemoryClient({
   profiler: true,
-})
+});
 
-await node.ready()
+await node.ready();
 
 // Run a transaction or call
 // ...
 
 // Access profiling data
-const vm = await node.getVm()
-const performanceLogs = vm.evm.getPerformanceLogs()
-console.log('Performance data:', performanceLogs)
+const vm = await node.getVm();
+const performanceLogs = vm.evm.getPerformanceLogs();
+console.log("Performance data:", performanceLogs);
 ```
 
 ## Complete Configuration Reference
 
-| Property | Type | Default | Description |
-|----------|------|---------|-------------|
-| `fork` | `{ transport: EIP1193RequestFn; blockTag?: BlockTag; }` | - | Enables forking from a live network or another Tevm instance |
-| `common` | `Common` | `tevmDevnet` | Chain configuration object |
-| `loggingLevel` | `"fatal" \| "error" \| "warn" \| "info" \| "debug" \| "trace"` | `"info"` | Logging verbosity level |
-| `miningConfig` | `{ type: 'auto' } \| { type: 'interval', interval: number }` | `{ type: 'auto' }` | Block mining behavior |
-| `profiler` | `boolean` | `false` | Enables performance logging |
-| `customPrecompiles` | `Precompile[]` | `[]` | Additional precompiled contracts |
-| `allowUnlimitedContractSize` | `boolean` | `false` | Disables EIP-170 contract size checks |
+| Property                     | Type                                                           | Default            | Description                                                  |
+| ---------------------------- | -------------------------------------------------------------- | ------------------ | ------------------------------------------------------------ |
+| `fork`                       | `{ transport: EIP1193RequestFn; blockTag?: BlockTag; }`        | -                  | Enables forking from a live network or another Tevm instance |
+| `common`                     | `Common`                                                       | `tevmDevnet`       | Chain configuration object                                   |
+| `loggingLevel`               | `"fatal" \| "error" \| "warn" \| "info" \| "debug" \| "trace"` | `"info"`           | Logging verbosity level                                      |
+| `miningConfig`               | `{ type: 'auto' } \| { type: 'interval', interval: number }`   | `{ type: 'auto' }` | Block mining behavior                                        |
+| `customPrecompiles`          | `Precompile[]`                                                 | `[]`               | Additional precompiled contracts                             |
+| `allowUnlimitedContractSize` | `boolean`                                                      | `false`            | Disables EIP-170 contract size checks                        |
 
 ## Best Practices
 
 <Callout type="warning" emoji="⚠️">
-  Following these best practices will help you avoid common pitfalls when working with Tevm Node.
+  Following these best practices will help you avoid common pitfalls when
+  working with Tevm Node.
 </Callout>
 
-### Always await node.ready()
+### Always pass in a common when forking
 
-```ts
-const node = createTevmNode()
-await node.ready() // Essential: Ensures node is fully initialized
-// Now safe to use the node
+Though a `common` object is not required it is highly recomended for following reasons
+
+- Tevm will initialize faster if a common is provided via not needing to fetch a chainId up front
+- Chain specific information such as EIP and hardfork info will help Tevm provide a closer experience to the real chain.
+
+When a common is not provided `tevmDefault` common is used
+
+```typescript
+import { createMemoryClient, http } from "tevm";
+import { optimism } from "tevm/common";
+
+const client = createMemoryClient({
+  // always pass in a common
+  common: optimism,
+  fork: { transport: http() },
+});
+
+// Because tevm knows this is an op stack chain it will operate closer to an l1 chain including allowing you to calculate l1 data fee
+const { l1DataFee } = await client.call({ data });
 ```
 
 ### Choose the Right Mining Configuration
 
+By Default Tevm uses manual mining. We believe explicit mining is the correct configuration for most to all use cases which is why it's the default. As a convenience we do offer automining which will mine a new block everytime a tx enters mempool. We also offer interval mining and gas mining to more closely replicate a real ethereum node.
+
 ```ts
 // For testing: Mine after each transaction
-const testNode = createTevmNode({
-  miningConfig: { type: 'auto' }
-})
+const testNode = createMemoryClient({
+  miningConfig: { type: "auto" },
+});
 
 // For simulation: Mine at intervals to mimic real networks
-const simulationNode = createTevmNode({
-  miningConfig: { type: 'interval', interval: 12_000 } // 12 seconds like Ethereum
-})
-
-await testNode.ready()
-await simulationNode.ready()
+const simulationNode = createMemoryClient({
+  miningConfig: { type: "interval", interval: 12_000 }, // 12 seconds like Ethereum
+});
 ```
 
-### Handle Initialization Errors
+### Utilize debug logging when something goes wrong
+
+When you have issues with Tevm, `debug logging` is useful. Tevm will produce a lot of logs so you should use an LLM to help comb through them.
 
 ```ts
-try {
-  const node = createTevmNode()
-  await node.ready()
-  console.log('Node successfully initialized')
-} catch (error) {
-  console.error('Node initialization failed:', error)
-  // Implement proper error handling
-}
+const client = createMemoryClient({
+  loggingLevel: "debug",
+});
 ```
 
-## Usage Scenarios
+### Call `client.ready()` if profiling
 
-- **Local Development**: Fast, auto-mining configuration with unlimited contract sizes for rapid local development
-- **Production Forking**: Realistic forked environment with precise error handling for production simulation
-- **Testing Environment**: Performance-focused configuration for CI/CD and test automation
-
-### Local Development Node
-
-```ts
-import { createTevmNode } from 'tevm'
-
-const devNode = createTevmNode({
-  miningConfig: { type: 'auto' },
-  loggingLevel: 'debug',        // See detailed logs during development
-  allowUnlimitedContractSize: true, // No contract size limits during development
-})
-
-await devNode.ready()
-
-// Node is ready for local development
-console.log('Development node ready!')
-```
-
-### Production Forked Node
-
-```ts
-import { createTevmNode, http } from 'tevm'
-
-const prodNode = createTevmNode({
-  fork: {
-    transport: http('https://mainnet.infura.io/v3/YOUR-KEY'),
-    blockTag: 'latest',  // Always use the latest block
-  },
-  miningConfig: { 
-    type: 'interval', 
-    interval: 12000     // Mine every 12 seconds like Ethereum mainnet
-  },
-  loggingLevel: 'error', // Only show critical issues in production
-})
-
-await prodNode.ready()
-
-console.log('Production forked node ready!')
-```
-
-### Testing Node
-
-```ts
-import { createTevmNode } from 'tevm'
-
-const testNode = createTevmNode({
-  miningConfig: { type: 'auto' }, // Immediate mining for faster tests
-  profiler: true,                 // Enable profiling for performance testing
-})
-
-await testNode.ready()
-
-// Run your tests with profiling enabled
-console.log('Testing node with profiling ready!')
-```
+Anytime you are profiling tevm you will want to call `client.ready()` before running the profiler or else you will be measuring the initializion time in addition to the action. When you don't call `client.ready()` all tevm actions implicitly wait for the client to be ready before executing. Tevm initializes very fast though as it doesn't need to do a `sync`.
 
 ## Next Steps
 
