--- a/docs/node/pages/core/managing-state.mdx
+++ b/docs/node/pages/core/managing-state.mdx
@@ -3,8 +3,6 @@ title: Managing State
 description: Overview of how to manage accounts, code, and storage in Tevm Node
 ---
 
-import { Tabs, Tab, Steps, Step } from "vocs/components";
-
 import { Callout, Steps, Button } from 'vocs/components'
 
 # Managing State
@@ -17,8 +15,75 @@ Tevm offers various approaches to manage Ethereum state, from low-level direct s
 
 ## State Management Approaches
 
-<Tabs>
-</Tabs>
+:::code-group
+```typescript [Raw API] showLineNumbers {1-2,4-6,9,10-15,18-26,29} filename="raw-state-manager.ts"
+import { createTevmNode } from 'tevm'
+import { EthjsAccount } from 'tevm/utils'
+
+const node = createTevmNode()
+const vm = await node.getVm()
+const stateManager = vm.stateManager // [!code focus]
+
+// Read account state
+const address = '0x1234567890123456789012345678901234567890'
+const account = await stateManager.getAccount(address) // [!code focus]
+console.log({
+  balance: account.balance, // [!code focus]
+  nonce: account.nonce, // [!code focus]
+  codeHash: account.codeHash, // [!code focus]
+  storageRoot: account.storageRoot // [!code focus]
+})
+
+// Create or update an account
+await stateManager.putAccount( // [!code focus]
+  address,
+  new EthjsAccount({
+    nonce: 0n,
+    balance: 10_000_000n,
+    storageRoot: '0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421',
+    codeHash: '0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470'
+  })
+)
+
+// Delete an account
+await stateManager.deleteAccount(address) // [!code focus]
+```
+
+<div data-title="Info: Raw API">
+  <p>The most direct way to manage state is through the <code>StateManager</code> interface.</p>
+  
+  <Callout type="tip" title="Power User API">
+    The raw StateManager API gives you maximum control but requires more detailed knowledge of Ethereum's state structure.
+  </Callout>
+</div>
+
+```typescript [Client API] showLineNumbers {1,3,6-9,12-13} filename="client-api.ts"
+import { createMemoryClient } from 'tevm'
+
+const client = createMemoryClient()
+
+// Set account balance
+await client.setBalance({ // [!code focus]
+  address: '0x1234567890123456789012345678901234567890', // [!code focus]
+  value: 1000000000000000000n // [!code focus]
+}) // [!code focus]
+
+// Get account balance
+const balance = await client.getBalance({ // [!code focus]
+  address: '0x1234567890123456789012345678901234567890' // [!code focus]
+}) // [!code focus]
+
+console.log(`Balance: ${balance}`)
+```
+
+<div data-title="Info: Client API">
+  <p>For most applications, the high-level client API provides a more familiar and convenient interface.</p>
+  
+  <Callout type="info" title="Recommended Approach">
+    This approach is recommended for most users as it provides a clean, consistent interface similar to other Ethereum libraries.
+  </Callout>
+</div>
+:::
 
 ## Contract State Management
 
@@ -41,8 +106,58 @@ Tevm offers various approaches to manage Ethereum state, from low-level direct s
   </div>
 </div>
 
-<Tabs>
-</Tabs>
+:::code-group
+```typescript [Raw API] showLineNumbers {3-6,9,12-13,16-19,22} filename="contract-management.ts"
+// Using the raw StateManager API
+
+// Deploy contract code
+await stateManager.putContractCode( // [!code focus]
+  address,
+  new Uint8Array([/* bytecode */]) // [!code focus]
+)
+
+// Read contract code
+const code = await stateManager.getContractCode(address) // [!code focus]
+
+// Read storage slot
+const slot = '0x0000000000000000000000000000000000000000000000000000000000000000' // [!code focus]
+const value = await stateManager.getContractStorage(address, slot) // [!code focus]
+
+// Write storage
+const key = '0x0000000000000000000000000000000000000000000000000000000000000000' // [!code focus]
+const newValue = '0x0000000000000000000000000000000000000000000000000000000000000001' // [!code focus]
+await stateManager.putContractStorage(address, key, newValue) // [!code focus]
+
+// Clear all storage
+await stateManager.clearContractStorage(address) // [!code focus]
+```
+
+```typescript [Client API] showLineNumbers {1,3-4,7-11,14-17,20-23} filename="client-contract-management.ts"
+import { createMemoryClient, hexToBytes } from 'tevm'
+
+const client = createMemoryClient()
+const contractAddress = '0x1234567890123456789012345678901234567890'
+
+// Deploy contract code
+await client.setCode({ // [!code focus]
+  address: contractAddress, // [!code focus]
+  // Convert hex string to bytes
+  bytecode: hexToBytes('0x608060405234801561001057600080fd5b50...') // [!code focus]
+}) // [!code focus]
+
+// Read contract code
+const code = await client.getCode({ // [!code focus]
+  address: contractAddress, // [!code focus]
+  blockTag: 'latest' // [!code focus]
+}) // [!code focus]
+
+// Use contract methods via ethers or viem
+const result = await client.call({ // [!code focus]
+  to: contractAddress, // [!code focus]
+  data: '0x70a08231000000000000000000000000f39fd6e51aad88f6f4ce6ab8827279cfffb92266' // [!code focus]
+}) // [!code focus]
+```
+:::
 
 ## Framework Integration
 
@@ -50,8 +165,62 @@ Tevm offers various approaches to manage Ethereum state, from low-level direct s
   Tevm allows you to combine high-level libraries like Viem and Ethers with low-level state access.
 </Callout>
 
-<Tabs>
-</Tabs>
+:::code-group
+```typescript [Viem] showLineNumbers {1,3,6-9,12-13,16-23} filename="viem-integration.ts"
+import { createMemoryClient } from 'tevm'
+
+const client = createMemoryClient()
+
+// Use Viem-style API for basic operations
+await client.setBalance({ // [!code focus]
+  address: '0x1234567890123456789012345678901234567890', // [!code focus]
+  value: 1000000000000000000n // [!code focus]
+}) // [!code focus]
+
+// Access raw state manager for advanced operations
+const vm = await client.transport.tevm.getVm() // [!code focus]
+const stateManager = vm.stateManager // [!code focus]
+
+// Use raw API for complex operations
+await stateManager.checkpoint() // [!code focus]
+try { // [!code focus]
+  await stateManager.putContractStorage(address, key, value) // [!code focus]
+  await stateManager.commit() // [!code focus]
+} catch (error) { // [!code focus]
+  await stateManager.revert() // [!code focus]
+} // [!code focus]
+```
+
+<div data-title="Info: Viem">
+  <Callout type="info">
+    The `createMemoryClient` function creates a client that implements viem's public actions, making it compatible with viem's ecosystem.
+  </Callout>
+</div>
+
+```typescript [Ethers] showLineNumbers {1-3,5-6,9,12-13} filename="ethers-integration.ts"
+import { createTevmNode } from 'tevm'
+import { requestEip1193 } from 'tevm/decorators'
+import { BrowserProvider } from 'ethers'
+
+const node = createTevmNode().extend(requestEip1193()) // [!code focus]
+const provider = new BrowserProvider(node) // [!code focus]
+
+// Use Ethers API for standard operations
+const balance = await provider.getBalance('0x1234...') // [!code focus]
+
+// Access raw state manager for advanced operations
+const vm = await node.getVm() // [!code focus]
+const stateManager = vm.stateManager // [!code focus]
+
+// Now you can use both Ethers and low-level StateManager APIs
+```
+
+<div data-title="Info: Ethers">
+  <Callout type="note">
+    Using the `requestEip1193` decorator makes your Tevm node compatible with Ethers.js Provider interface.
+  </Callout>
+</div>
+:::
 
 ## Advanced Features
 
@@ -143,8 +312,63 @@ Tevm offers various approaches to manage Ethereum state, from low-level direct s
   </div>
 </div>
 
-<Tabs>
-</Tabs>
+:::code-group
+```typescript [Error Handling] showLineNumbers {1-14} filename="error-handling.ts"
+try {
+  const account = await stateManager.getAccount('0x1234...')
+  if (!account) {
+    throw new Error('Account not found')
+  }
+  // Work with account
+} catch (error) {
+  if (error instanceof MissingAccountError) {
+    // Handle specific error types
+    console.log('Account does not exist yet')
+  } else {
+    // Handle generic errors
+    console.error('State operation failed:', error)
+  }
+}
+```
+
+<div data-title="Error Handling Tips">
+  <Callout type="warning" title="Error Types">
+    Tevm provides specific error types for different state operations. Catch and handle these appropriately.
+  </Callout>
+</div>
+
+```typescript [State Isolation] showLineNumbers {2,5} filename="state-isolation.ts"
+// Create isolated copy for testing
+const isolatedState = await stateManager.deepCopy() // [!code focus]
+
+// Make changes without affecting original
+await isolatedState.putAccount(address, account) // [!code focus]
+
+// Changes to isolatedState don't affect the original stateManager
+```
+
+<div data-title="Isolation Tips">
+  <Callout type="tip" title="Testing">
+    State isolation is particularly useful for testing scenarios where you want to try operations without affecting your main state.
+  </Callout>
+</div>
+
+```typescript [Atomic Operations] showLineNumbers {1-12} filename="atomic-operations.ts"
+await stateManager.checkpoint()
+try {
+  // Group related changes
+  await Promise.all([
+    stateManager.putAccount(address, account),
+    stateManager.putContractStorage(address, key, value),
+  ])
+  await stateManager.commit()
+} catch (error) {
+  // Revert all changes if any operation fails
+  await stateManager.revert()
+  console.error('Transaction reverted:', error)
+}
+```
+:::
 
 ## Related Resources
 
