--- a/docs/node/pages/getting-started/bundler.mdx
+++ b/docs/node/pages/getting-started/bundler.mdx
@@ -3,8 +3,6 @@ title: Bundler Quickstart
 description: Quickly set up Tevm bundler to import Solidity contracts directly in TypeScript
 ---
 
-import { Callout, Tabs, Tab } from "vocs/components";
-
 # Bundler Quickstart
 
 This quickstart guide will help you set up Tevm's bundler functionality, allowing you to import Solidity contracts directly into your TypeScript/JavaScript code.
@@ -27,49 +25,16 @@ Tevm bundler enables a seamless integration between Solidity and TypeScript, let
 
 First, install Tevm and the TypeScript plugin in your project:
 
-<Tabs>
-<Tab title="npm">
 ```bash
 npm install tevm
 npm install -D @tevm/ts-plugin
 ```
-</Tab>
-
-<Tab title="pnpm">
-```bash
-pnpm add tevm
-pnpm add -D @tevm/ts-plugin
-```
-</Tab>
-
-<Tab title="yarn">
-```bash
-yarn add tevm
-yarn add -D @tevm/ts-plugin
-```
-</Tab>
-
-<Tab title="bun">
-```bash
-bun add tevm
-bun add -D @tevm/ts-plugin
-```
-</Tab>
-
-<Tab title="jsr">
-```bash
-jsr add @tevm/tevm
-npm install -D @tevm/ts-plugin
-```
-</Tab>
-
-</Tabs>
 
 ## Step 2: Configure Your Bundler
 
 The bundler plugin handles the actual compilation of Solidity files during your build process. This ensures your final JavaScript output will contain the compiled Solidity contract ABIs, bytecode, and TypeScript interfaces.
 
-<Callout type="tip">
+:::tip
 If you have a complex project or Foundry-based imports, you might need advanced configuration. See the [Advanced Configuration](#advanced-configuration) section for setting up `tevm.config.json`.
 
 The bundler creates a `.tevm` cache directory. Consider adding it to your `.gitignore`:
@@ -77,12 +42,10 @@ The bundler creates a `.tevm` cache directory. Consider adding it to your `.giti
 # .gitignore
 .tevm
 ```
-</Callout>
+:::
 
 ### For Vite (recommended)
 
-<Tabs>
-<Tab title="npm">
 ```ts
 // vite.config.ts
 import { defineConfig } from 'vite'
@@ -96,25 +59,6 @@ export default defineConfig({
   ],
 })
 ```
-</Tab>
-
-<Tab title="jsr">
-```ts
-// vite.config.ts
-import { defineConfig } from 'vite'
-import { vitePluginTevm } from '@tevm/tevm/bundler/vite-plugin'
-import react from '@vitejs/plugin-react'
-
-export default defineConfig({
-  plugins: [
-    react(),
-    vitePluginTevm(),
-  ],
-})
-```
-</Tab>
-
-</Tabs>
 
 ### For Other Bundlers
 
@@ -160,11 +104,11 @@ const nextConfig = {
 export default nextConfig
 ```
 
-<Callout type="warning">
+:::warning
 Next.js has its own type-checking pipeline that may conflict with Solidity imports. If you see type errors during `next build`, either:
 1. Use `typescript.ignoreBuildErrors: true` (as shown above)
 2. Use the codegen approach with `npx tevm gen` to generate explicit TypeScript files 
-</Callout>
+:::
 </details>
 
 <details>
@@ -276,7 +220,7 @@ For Vim, Neovim, and most other editors with TypeScript support, everything shou
 
 Create a simple contract in your project. Name it `Counter.s.sol` to include bytecode (the `.s.sol` extension tells Tevm to generate deployable bytecode):
 
-<Callout type="info">
+:::info
 **Understanding .sol vs .s.sol extensions:**
 
 - **`.sol`** - Only generates the ABI (Application Binary Interface)
@@ -288,7 +232,7 @@ Create a simple contract in your project. Name it `Counter.s.sol` to include byt
   - Can be deployed or used as an interface
   - Increases bundle size but enables deployment
   - Example: `import { Token } from './Token.s.sol'`
-</Callout>
+:::
 
 ```solidity
 // SPDX-License-Identifier: MIT
@@ -307,17 +251,15 @@ contract Counter {
 }
 ```
 
-<Callout type="info">
+:::info
 Files with the `.s.sol` extension generate both ABI and bytecode, allowing contract deployment.
 Regular `.sol` files only generate ABIs (useful for interacting with existing contracts).
-</Callout>
+:::
 
 ## Step 6: Import and Use the Contract
 
 Now you can import the contract directly in your TypeScript code:
 
-<Tabs>
-<Tab title="npm">
 ```tsx
 // src/App.tsx or any other file
 import { Counter } from './Counter.s.sol'
@@ -372,66 +314,6 @@ function App() {
 
 export default App
 ```
-</Tab>
-
-<Tab title="jsr">
-```tsx
-// src/App.tsx or any other file
-import { Counter } from './Counter.s.sol'
-import { createMemoryClient } from '@tevm/tevm'
-import { useState, useEffect } from 'react'
-
-function App() {
-  const [count, setCount] = useState<bigint>(0n)
-  const [client] = useState(() => createMemoryClient())
-  const [deployedAddress, setDeployedAddress] = useState<string>('')
-  
-  useEffect(() => {
-    const deploy = async () => {
-      // Deploy the contract - need to call .deploy() and pass any constructor args
-      // (Counter doesn't have constructor args in this example)
-      const deployed = await client.deployContract(Counter.deploy())
-      setDeployedAddress(deployed.address)
-      
-      // Get initial count
-      const initialCount = await deployed.read.getCount()
-      setCount(initialCount)
-    }
-    
-    deploy()
-  }, [client])
-  
-  const handleIncrement = async () => {
-    if (!deployedAddress) return
-    
-    // Get contract with address
-    const contract = Counter.withAddress(deployedAddress)
-    
-    // Call increment method
-    await client.writeContract(contract.write.increment())
-    
-    // Mine a block to include the transaction
-    await client.mine({ blocks: 1 })
-    
-    // Get updated count
-    const newCount = await client.readContract(contract.read.getCount())
-    setCount(newCount)
-  }
-  
-  return (
-    <div>
-      <h1>Tevm Counter Example</h1>
-      <p>Count: {count.toString()}</p>
-      <button onClick={handleIncrement}>Increment</button>
-    </div>
-  )
-}
-
-export default App
-```
-</Tab>
-
-</Tabs>
 
 ### Example of Type-Safe Method Calls
 
@@ -478,9 +360,9 @@ The `Counter` object is a [Tevm Contract](/reference/contract) instance with:
 - `events`: Type-safe event filters for subscription
 - `withAddress()`: Method to create a new instance with an address
 
-<Callout type="info">
+:::info
 Note that `bytecode` and `deployedBytecode` are only available when using the `.s.sol` extension. If you import a regular `.sol` file, these properties will be `undefined`, and you won't be able to deploy the contract.
-</Callout>
+:::
 
 ## Advanced Configuration
 
@@ -499,7 +381,7 @@ By default, Tevm uses Node.js resolution to resolve contract imports (similar to
 }
 ```
 
-<Callout type="tip">
+:::tip
 It's highly recommended to add the `.tevm` cache directory to your `.gitignore`:
 
 ```bash
@@ -508,7 +390,7 @@ It's highly recommended to add the `.tevm` cache directory to your `.gitignore`:
 ```
 
 This prevents compiled artifacts from being committed to your repository. The `.tevm` directory is ephemeral - you can safely delete it if you encounter stale builds or caching issues, but it will require recompiling all contracts on the next build.
-</Callout>
+:::
 
 Setting `"foundryProject": true` will:
 - Automatically read your Foundry remappings from `foundry.toml` or `remappings.txt`
@@ -562,9 +444,9 @@ Tevm is actively developing exciting new features to make working with contracts
 
 #### Network Imports with Macros
 
-<Callout type="info">
+:::info
 The macros-based network import feature is coming soon and is not yet available in the current release.
-</Callout>
+:::
 
 In an upcoming version, Tevm will support importing contracts from any EVM network using build-time macros. This provides better performance and stronger type safety by resolving contracts during your build process instead of at runtime:
 
@@ -662,9 +544,9 @@ This approach automatically resolves ABIs at build time and creates fully type-s
 
 #### Inline Solidity with Template Literals
 
-<Callout type="info">
+:::info
 The inline Solidity feature is coming soon and is not yet available in the current release.
-</Callout>
+:::
 
 For quick prototyping or one-off contracts, you'll soon be able to define Solidity contracts directly in your JavaScript/TypeScript using template literals:
 
@@ -722,7 +604,7 @@ This will provide the same type-safety and features as file-based imports, but w
 
 ## Codegen Alternative to Bundler
 
-<Callout type="tip">
+:::tip
 If your framework conflicts with the bundler approach or you prefer explicit type generation, try the codegen approach using the Tevm CLI:
 
 ```bash
@@ -740,7 +622,7 @@ tevm generate contract "ERC20Token"
 # Customize input patterns and output location
 tevm generate contract --include "contracts/**/*.sol" --output "types/"
 ```
-</Callout>
+:::
 
 ## Next Steps
 
