--- a/docs/node/pages/getting-started/testimonials.mdx
+++ b/docs/node/pages/getting-started/testimonials.mdx
@@ -13,10 +13,10 @@ Here's what developers and industry leaders are saying about Tevm
 
 ## Community Highlights
 
-<Callout type="info" title="Developer Feedback">
+:::tip[Developer Feedback]
 Tevm's unique approach of bringing Ethereum execution directly to JavaScript environments has resonated with most developers who have given Tevm a try.
 Developers report problems previously difficult being simple to solve with Tevm
-</Callout>
+:::
 
 <div style={{ 
   display: 'grid', 
@@ -52,6 +52,8 @@ Developers report problems previously difficult being simple to solve with Tevm
       </a>
     </div>
   </div>
+
+{" "}
 
 <div
   style={{
@@ -93,6 +95,8 @@ Developers report problems previously difficult being simple to solve with Tevm
     </a>
   </div>
 </div>
+
+{" "}
 
 <div
   style={{
@@ -174,6 +178,8 @@ Developers report problems previously difficult being simple to solve with Tevm
   </div>
 </div>
 
+{" "}
+
 <div
   style={{
     border: "1px solid var(--vocs-color_border)",
@@ -212,6 +218,8 @@ Developers report problems previously difficult being simple to solve with Tevm
     </a>
   </div>
 </div>
+
+{" "}
 
 <div
   style={{
@@ -253,6 +261,8 @@ Developers report problems previously difficult being simple to solve with Tevm
     </a>
   </div>
 </div>
+
+{" "}
 
 <div
   style={{
@@ -327,31 +337,21 @@ Developers report problems previously difficult being simple to solve with Tevm
 
 ## Share Your Experience
 
-<div className="steps">
-  <div className="step">
-    <h3>Join the Community</h3>
-    <p>We'd love to hear how Tevm has improved your development workflow:</p>
-    <ul>
-      <li><a href="https://t.me/+ANThR9bHDLAwMjUx">Telegram Group</a></li>
-      <li><a href="https://twitter.com/tevmtools">Twitter/X</a></li>
-    </ul>
-  </div>
-  
-  <div className="step">
-    <h3>Report Success Stories</h3>
-    <p>Have a compelling use case or success story?</p>
-    <ul>
-      <li><a href="https://github.com/evmts/tevm-monorepo/issues/new?labels=testimonial&template=testimonial.md">Create an issue</a> with the label "testimonial"</li>
-      <li>Email the team at support@tevm.sh</li>
-    </ul>
-  </div>
-</div>
+::::steps
+
+### Join the Community
+
+We'd love to hear how Tevm has improved your development workflow:
+
+- [Telegram Group](https://t.me/+ANThR9bHDLAwMjUx)
+- [Twitter/X](https://twitter.com/tevmtools)
+
+### Report Success Stories
+
+Have a compelling use case or success story?
+
+- [Create an issue](https://github.com/evmts/tevm-monorepo/issues/new?labels=testimonial&template=testimonial.md) with the label "testimonial"
+- Email the team at support@tevm.sh
+  ::::
 
 Your feedback helps us improve Tevm and guides our development priorities!
-
-<div style={{ display: "flex", gap: "1rem", marginTop: "2rem" }}>
-  <Button href="./overview" variant="accent">
-    ← Back to Overview
-  </Button>
-  <Button href="./viem">Continue to Viem Integration →</Button>
-</div>
