--- a/docs/node/pages/examples/viem.mdx
+++ b/docs/node/pages/examples/viem.mdx
@@ -4,7 +4,7 @@ description: Connect Tevm Node to Viem as a custom transport
 ---
 
 import { Callout } from "vocs/components";
-import { Tab, TabGroup, Card, CardGrid } from "../../../components";
+import { Tab, TabGroup, Card, CardGrid } from "../../components";
 
 # Using with Viem
 
