--- a/docs/node/pages/introduction/architecture-overview.mdx
+++ b/docs/node/pages/introduction/architecture-overview.mdx
@@ -7,7 +7,7 @@ authors:
 ---
 
 import { Callout, Steps, Button } from "vocs/components";
-import { TabGroup, FileTree, Card } from "../../../components";
+import { TabGroup, FileTree, Card } from "../../components";
 
 # Tevm Architecture Overview
 
