--- a/docs/node/pages/introduction/why-run-ethereum-in-js.mdx
+++ b/docs/node/pages/introduction/why-run-ethereum-in-js.mdx
@@ -7,7 +7,7 @@ authors:
 ---
 
 import { Callout, Steps, Button } from "vocs/components";
-import { Card, TabGroup, FileTree } from "../../../components";
+import { Card, TabGroup, FileTree } from "../../components";
 
 # Why Run An Ethereum Node in JavaScript?
 
